js ipo note updates

--- a/js-ipo-basics/js-introduction.html
+++ b/js-ipo-basics/js-introduction.html
@@ -35,7 +35,6 @@
       <img class="img-fluid" src="img/programming-definition.png" alt="Programming Definition">
     </p>
     <p>Programming involves using a programming language to instruct a computer to complete a task.</p>
-    <p>JavaScript is a programming language that may be used to build web applications.</p>
     <hr>
 
     <h2><i class="far fa-bookmark topic-heading"></i> JavaScript How To</h2>
@@ -56,11 +55,12 @@ alert("Hello World!");
 alert("Welcome to JavaScript.");  
       </code></pre>
     </p>
+    <p>Note that each alert command ends with a semi-colon (;).</p>
 
     <h3>Step 2: Run JavaScript in HTML document</h3>
     <p>Put a <code class="lang-html">&lt;script&gt;</code> element as the <strong>last element</strong> in the html
       body. This will run
-      the JavaScript code specificed in the script's src attribute.</p>
+      the JavaScript code specificed in the script's <code class="lang-js">src</code> attribute.</p>
 
     <h4>index.html</h4>
     <p>
@@ -80,7 +80,7 @@ alert("Welcome to JavaScript.");
       <li>An algorithm is a step by step set of instructions to complete a task.</li>
       <li>Programming involves using programming languages to implement algorithms.</li>
       <li>JavaScript is a programming language for web applications.</li>
-      <li>Run JavaScript using an external js file and the <code class="lang-js">&lt;script&gt;</code> tag.</li>
+      <li>Run JavaScript using an external js file and the <code class="lang-js">&lt;script&gt;</code> element.</li>
       <li>The <code class="lang-js">alert()</code> function will display a provided message in an alert-box.</li>
     </ul>
     <hr>
