--- a/js-ipo-basics/js-math-object.html
+++ b/js-ipo-basics/js-math-object.html
@@ -36,7 +36,7 @@
     <p>
       <pre><code class="lang-js">
 // Generate a random decimal between 0 and 1
-console.log(Math.random()); // Possible Output => 0.2743923
+Math.random(); // Possible Result => 0.2743923
       </code></pre>
     </p>
 
@@ -44,7 +44,7 @@ console.log(Math.random()); // Possible Output => 0.2743923
     <p>
       <pre><code class="lang-js">
 // Determine the square root of a provided number
-console.log(Math.sqrt(64)); // Output => 8
+Math.sqrt(64); // Result => 8
       </code></pre>
     </p>
 
@@ -52,8 +52,8 @@ console.log(Math.sqrt(64)); // Output => 8
     <p>
       <pre><code class="lang-js">
 // Round a number DOWN to the nearest integer
-console.log(Math.floor(5.892)); // Output => 5
-console.log(Math.floor(5.265)); // Output => 5
+Math.floor(5.892); // Result => 5
+Math.floor(5.265); // Result => 5
       </code></pre>
     </p>
 
@@ -61,8 +61,8 @@ console.log(Math.floor(5.265)); // Output => 5
     <p>
       <pre><code class="lang-js">
 // Round a number UP to the nearest integer
-console.log(Math.floor(5.892)); // Output => 6
-console.log(Math.floor(5.265)); // Output => 6
+Math.floor(5.892); // Result => 6
+Math.floor(5.265); // Result => 6
       </code></pre>
     </p>
 
@@ -70,8 +70,8 @@ console.log(Math.floor(5.265)); // Output => 6
     <p>
       <pre><code class="lang-js">
 // Round a number to the nearest integer
-console.log(Math.round(5.892)); // Output => 6
-console.log(Math.round(5.265)); // Output => 5
+Math.round(5.892); // Result => 6
+Math.round(5.265); // Result => 5
       </code></pre>
     </p>
 
