--- a/js-ipo-basics/js-number-data.html
+++ b/js-ipo-basics/js-number-data.html
@@ -28,7 +28,6 @@
     <hr>
 
     <h2><i class="far fa-bookmark topic-heading"></i> Number Data Type</h2>
-    <p>Another common type of data is the <strong>Number</strong> data type.</p>
     <p>A Number is simply a numerical value (with or without a decimal) that is not enclosed by quotes.</p>
     <p>
       <pre><code class="lang-js">
@@ -44,38 +43,38 @@
 
     <h4>Addition (<code class="lang-js">+</code>)</h4>
     <pre><code class="lang-js">
-console.log(2 + 3); // Output=> 5
+2 + 3; // Result => 5
     </code></pre>
     <h4>Subraction (<code class="lang-js">-</code>)</h4>
     <pre><code class="lang-js">
-console.log(7 - 3); // Output=> 4
+7 - 3; // Result => 4
     </code></pre>
     <h4>Multiplication (<code class="lang-js">*</code>)</h4>
     <pre><code class="lang-js">
-console.log(6 * 5); // Output=> 30
+6 * 5; // Result => 30
     </code></pre>
     <h4>Division (<code class="lang-js">/</code>)</h4>
     <pre><code class="lang-js">
-console.log(3 / 2); // Output=> 1.5
+3 / 2; // Result => 1.5
     </code></pre>
     <h4>Remainder (<code class="lang-js">%</code>)</h4>
     <pre><code class="lang-js">
-console.log(3 % 2); // Output=> 1
-console.log(11 % 3); // Output=> 2
-console.log(12 % 4); // Output=> 0
+3 % 2; // Result => 1
+11 % 3; // Result => 2
+12 % 4; // Result => 0
     </code></pre>
     <h4>Exponent (<code class="lang-js">**</code>)</h4>
     <pre><code class="lang-js">
-console.log(5 ** 2); // Output=> 25
-console.log(2 ** 3); // Output=> 8
-console.log(16 ** 0.5); // Output=> 4
+5 ** 2; // Result => 25
+2 ** 3; // Result => 8
+16 ** 0.5; // Result => 4
     </code></pre>
     <h4>Order of Operations</h4>
     <p>JavaScript follows proper order of operations and ( ) may be used in calculations to influence the
       order of operations.</p>
     <pre><code class="lang-js">
-console.log(1 + 2 * 3); // Output=> 7
-console.log((1 + 2) * 3); // Output=> 9
+1 + 2 * 3; // Result => 7
+(1 + 2) * 3; // Result => 9
     </code></pre>
     <hr>
 
@@ -85,12 +84,11 @@ console.log((1 + 2) * 3); // Output=> 9
     </p>
     <p>
       <pre><code class="lang-js">
-console.log(23.456.toFixed(2)); // Output => "23.46"
-console.log(7.2974.toFixed(1)); // Output => "7.3"
+23.451.toFixed(2); // Result => "23.45"
+7.2974.toFixed(1); // Result => "7.3"
       </code></pre>
     </p>
-    <p>This method is often used when outputting the result of a calculation and you don't want to display so many
-      numbers after the decimal.
+    <p>This method is often used when outputting the result of a calculation and you want to displaly a rounded value.
     </p>
     <hr>
 
@@ -98,7 +96,7 @@ console.log(7.2974.toFixed(1)); // Output => "7.3"
     <ul>
       <li>The Number data type is used to represent numbers.</li>
       <li>JavaScript supports the basic math operations for numbers.</li>
-      <li>The <code class="lang-js">toFixed()</code> method rounds a number to a specified number of decimal places and
+      <li>The <code class="lang-js">toFixed(</code> method rounds a number to a specified number of decimal places and
         returns the result as a String.</li>
     </ul>
     <hr>
