--- a/js-ipo-basics/js-string-data.html
+++ b/js-ipo-basics/js-string-data.html
@@ -43,8 +43,8 @@ let single = 'single-quoted String data';
     <p>In JavaScript, concatenation is done with the <code class="lang-js">+</code> operator.</p>
     <p>
       <pre><code class="lang-js">
-console.log("Hello" + "World"); // Output=> "HelloWorld"
-console.log("Hi" + " There!"); // Output=> "Hi There!"
+"Hello" + "World"; // Result => "HelloWorld"
+"Hi" + " There!"; // Result => "Hi There!"
       </code></pre>
     </p>
     <hr>
@@ -57,8 +57,8 @@ console.log("Hi" + " There!"); // Output=> "Hi There!"
     </p>
     <p>
       <pre><code class="lang-js">
-console.log("hello".length); // Output=> 5
-console.log("Hi There".length); // Output=> 8
+"hello".length; // Result => 5
+"Hi There".length; // Result => 8
       </code></pre>
     </p>
 
@@ -67,8 +67,8 @@ console.log("Hi There".length); // Output=> 8
       convert a string to either all lowercase or all uppercase letters.</p>
     <p>
       <pre><code class="lang-js">
-console.log("Algorithm".toLowerCase()); // Output=> "algorithm"
-console.log("JavaScript".toUpperCase()); // Output=> "JAVASCRIPT"
+"Algorithm".toLowerCase(); // Result => "algorithm"
+"JavaScript".toUpperCase(); // Result => "JAVASCRIPT"
       </code></pre>
     </p>
     <hr>
@@ -86,12 +86,12 @@ let backtick = `backtick String data`;
     <p>
       <pre><code class="lang-js">
 let name = "John";
-console.log(`Hello ${name}!`); // Output => "Hello John!"
+`Hello ${name}!`; // Result  => "Hello John!"
 
-console.log(`2 + 3 = ${2 + 3}`); // Output => 2 + 3 = 5
+`2 + 3 = ${2 + 3}`; // Result  => 2 + 3 = 5
 
-console.log(`A random number is: ${Math.random()}`);
-// Output => "A random number is: 0.73250932"
+`A random number is: ${Math.random()}`);
+// Possible Output => "A random number is: 0.73250932"
     </code></pre>
     </p>
     <p>A String made with backticks is commonly called a <strong>Template String</strong>.</p>
