--- a/html-interaction/getElementById.html
+++ b/html-interaction/getElementById.html
@@ -29,8 +29,8 @@
     <h4>index.html</h4>
     <pre><code class="lang-html">
 &lt;body&gt;
-&lt;h1 id="heading"&gt;This is a Heading&lt;/h1&gt;
-&lt;p id="para"&gt;This is a paragraph.&lt;/p&gt;
+&lt;h1 id="headingId"&gt;This is a Heading&lt;/h1&gt;
+&lt;p id="paraId"&gt;This is a paragraph.&lt;/p&gt;
 
 &lt;!-- Run External JavaScript File --&gt;
 &lt;script src="main.js"&gt;&lt;/script&gt;
@@ -40,8 +40,8 @@
     <h4>main.js</h4>
     <pre><code class="lang-js">
 // Variables to store reference to HTML Elements
-let headingEl = document.getElementById("heading");
-let paragraphEl = document.getElementById("para");
+let headingEl = document.getElementById("headingId");
+let paragraphEl = document.getElementById("paraId");
 
 // Log elements to console to verify
 console.log(headingEl);
