--- a/html-interaction/inner-html.html
+++ b/html-interaction/inner-html.html
@@ -7,17 +7,24 @@
   <title>HACS</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="../img/ainlay-logo-blue-white.png">
-  <link href="../css/home.css" rel="stylesheet" type="text/css" />
-  <link href="../css/page.css" rel="stylesheet" type="text/css" />
-  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/hacs/img/ainlay-logo-blue-white.png">
+  <link href="/hacs/css/home.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/page.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <nav></nav>
 
   <main>
-    <h1>innerHTML</h1>
+    <a class="back-link" href="/hacs/js-reference.html">&lt; JS Reference</a>
+    <div class="title">
+      <h1>innerHTML</h1>
+      <!-- <a href="#" id="yt-link" target="_blank">
+        <i class="fab fa-youtube fa-lg"></i>
+        Video Explanation
+      </a> -->
+    </div>
     <hr>
 
     <h2><i class="far fa-bookmark topic-heading"></i> Set Element Content</h2>
@@ -29,9 +36,9 @@
     <h4>index.html</h4>
     <pre><code class="lang-html">
 &lt;body&gt;
-&lt;h1 id="heading"&gt;This is a Heading&lt;/h1&gt;
-&lt;p id="para"&gt;This is a paragraph.&lt;/p&gt;
-&lt;p&gt;&lt;button id="btn"&gt;Click Me&lt;/button&gt;&lt;/p&gt;
+&lt;h1 id="headingId"&gt;This is a Heading&lt;/h1&gt;
+&lt;p id="paraId"&gt;This is a paragraph.&lt;/p&gt;
+&lt;p&gt;&lt;button id="btnId"&gt;Click Me&lt;/button&gt;&lt;/p&gt;
   
 &lt;!-- Run External JavaScript File --&gt;
 &lt;script src="script.js"&gt;&lt;/script&gt;
@@ -43,9 +50,9 @@
     </p>
     <pre><code class="lang-js">
 // Variables to store references to HTML elements
-let btnEl = document.getElementById("btn");
-let headingEl = document.getElementById("heading");
-let paraEl = document.getElementById("para");
+let btnEl = document.getElementById("btnId");
+let headingEl = document.getElementById("headingId");
+let paraEl = document.getElementById("paraId");
 
 // Run changeContent function when button is clicked 
 btnEl.addEventListener("click", changeContent);
@@ -66,12 +73,12 @@ function changeContent() {
   </main>
 
   <!-- Load Nav -->
-  <script src="../js/load-nav.js"></script>
+  <script src="/hacs/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("../includes/nav.html", "nav");
+    loadFileIntoEl("/hacs/includes/nav-js-ref.html", "nav");
   </script>
 
-  <script src="../js/prism.js"></script>
+  <script src="/hacs/js/prism.js"></script>
 </body>
 
 </html>
