--- a/html-interaction/input-elements.html
+++ b/html-interaction/input-elements.html
@@ -7,64 +7,82 @@
   <title>HACS</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="../img/ainlay-logo-blue-white.png">
-  <link href="../css/home.css" rel="stylesheet" type="text/css" />
-  <link href="../css/page.css" rel="stylesheet" type="text/css" />
-  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/hacs/img/ainlay-logo-blue-white.png">
+  <link href="/hacs/css/home.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/page.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <nav></nav>
 
   <main>
-    <h1>&lt;input&gt; Elements</h1>
+    <a class="back-link" href="/hacs/js-reference.html">&lt; JS Reference</a>
+    <div class="title">
+      <h1>&lt;input&gt; Elements</h1>
+      <!-- <a href="#" id="yt-link" target="_blank">
+        <i class="fab fa-youtube fa-lg"></i>
+        Video Explanation
+      </a> -->
+    </div>
     <hr>
 
     <h2><i class="far fa-bookmark topic-heading"></i> HTML &lt;input&gt; Element</h2>
     <p>An <code class="lang-html">&lt;input&gt;</code> element will display as an input-box on a web page: <input>.</p>
-    <p>An <code class="lang-html">&lt;input&gt;</code> element is a self-closing element: it only has an opening tag and
-      no closing tag.</p>
     <p>An <code class="lang-html">&lt;input&gt;</code> element may have id and value attributes.</p>
     <ul>
       <li><strong>id attribute</strong>: use getElementById() to get a reference to the element.</li>
-      <li><strong>value attribute</strong>: use to initialize the value of the input element.</li>
+      <li><strong>value attribute</strong>: may be used to initialize the value of the input element.</li>
     </ul>
+
     <h4>index.html</h4>
     <pre><code class="lang-html">
-&lt;p&gt;Enter your name: &lt;input id="name-in"&gt;&lt;/p&gt;
-&lt;p&gt;Enter the time of day: &lt;input id="time-in" value="Morning"&gt;&lt;/p&gt;
-&lt;p&gt;&lt;button id="btn"&gt;Submit&lt;/button&gt;&lt;/p&gt;
+&lt;p&gt;Enter your name: &lt;input id="nameId"&gt;&lt;/p&gt;
+&lt;p&gt;Enter the time of day: &lt;input id="timeId" value="Morning"&gt;&lt;/p&gt;
+&lt;p&gt;&lt;button id="btnId"&gt;Submit&lt;/button&gt;&lt;/p&gt;
     </code></pre>
 
     <hr>
     <h4>Output of index.html</h4>
-    <p>Enter your name: <input id="name-in"></p>
-    <p>Enter the time of day: <input id="time-in" value="Morning"></p>
-    <p><button id="btn">Submit</button></p>
+    <p>Enter your name: <input id="nameId"></p>
+    <p>Enter the time of day: <input id="timeId" value="Morning"></p>
+    <p><button id="btnId">Submit</button></p>
     <hr>
 
     <h2><i class="far fa-bookmark topic-heading"></i> Get Value of &lt;input&gt; Element</h2>
-    <p>Use JavaScript to select an <code class="lang-html">&lt;input&gt;</code> element by id and then use its
-      <strong>value property</strong> to get
-      the contents of the input-box.</p>
+    <p>The following steps may be used to get the value of an <code class="lang-html">&lt;input&gt;</code> element.</p>
+    <ol>
+      <li>Use the id of the <code class="lang-html">&lt;input&gt;</code> element to get a reference to the
+        element.
+      </li>
+      <pre><code class="lang-js">let nameEl = document.getElementById("nameId");</code></pre>
+      <li>Use the <strong>value</strong> property to get the value of the <code class="lang-html">&lt;input&gt;</code>
+        element and store the result in a variable for
+        future use.
+      </li>
+      <pre><code class="lang-js">let name = nameEl.value</code></pre>
+      <li>Use the variable that is storing the user input.</li>
+      <pre><code class="lang-js">alert(`Hello ${name}.`);</code></pre>
+    </ol>
+
     <h4>script.js</h4>
     <pre><code class="lang-js">
 // HTML variables
-let btnEl = document.getElementById("btn");
-let nameInEl = document.getElementById("name-in");
-let timeOfDayEl = document.getElementById("time-in");
+let btnEl = document.getElementById("btnId");
+let nameEl = document.getElementById("nameId");
+let timeOfDayEl = document.getElementById("timeId");
 
 // Add Event Listener to button element
 btnEl.addEventListener("click", encourage);
 
 function encourage() {
   // Input 
-  let name = nameInEl.value;
+  let name = nameEl.value;
   let timeOfDay = timeOfDayEl.value;
 
   // Output
-  alert("Hello " + name);
-  alert("Have a great " + timeOfDay + "!");
+  alert(`Hello ${name}.`);
+  alert(`Have a great ${timeOfDay}!`);
 }
     </code></pre>
 
@@ -87,9 +105,9 @@ function encourage() {
 
   <script>
     // HTML variables
-    let btnEl = document.getElementById("btn");
-    let nameInEl = document.getElementById("name-in");
-    let timeOfDayEl = document.getElementById("time-in");
+    let btnEl = document.getElementById("btnId");
+    let nameInEl = document.getElementById("nameId");
+    let timeOfDayEl = document.getElementById("timeId");
 
     // Add Event Listener to button element
     btnEl.addEventListener("click", encourage);
@@ -106,12 +124,12 @@ function encourage() {
   </script>
 
   <!-- Load Nav -->
-  <script src="../js/load-nav.js"></script>
+  <script src="/hacs/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("../includes/nav.html", "nav");
+    loadFileIntoEl("/hacs/includes/nav-js-ref.html", "nav");
   </script>
 
-  <script src="../js/prism.js"></script>
+  <script src="/hacs/js/prism.js"></script>
 </body>
 
 </html>
