--- a/js-reference.html
+++ b/js-reference.html
@@ -147,12 +147,12 @@
       </li>
       <li>
         <div class="li-div">
-          <a href="#">Uses of Loops</a>
+          <a href="js-control/loop-uses.html">Uses of Loops</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="#">Nested Loops</a>
+          <a href="js-control/nested-loops.html">Nested Loops</a>
         </div>
       </li>
     </ol>
