--- a/html-canvas/drawing-basics.html
+++ b/html-canvas/drawing-basics.html
@@ -7,22 +7,23 @@
   <title>HACS</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="../img/ainlay-logo-blue-white.png">
-  <link href="../css/home.css" rel="stylesheet" type="text/css" />
-  <link href="../css/page.css" rel="stylesheet" type="text/css" />
-  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/hacs/img/ainlay-logo-blue-white.png">
+  <link href="/hacs/css/home.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/page.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <nav></nav>
 
   <main>
+    <a class="back-link" href="/hacs/js-reference.html">&lt; JS Reference</a>
     <div class="title">
       <h1>Drawing Basics</h1>
-      <a href="#" id="yt-link" target="_blank">
+      <!-- <a href="#" id="yt-link" target="_blank">
         <i class="fab fa-youtube fa-lg"></i>
-        Video Lesson
-      </a>
+        Video Explanation
+      </a> -->
     </div>
     <hr>
 
@@ -264,12 +265,12 @@ ctx.stroke();
   </main>
 
   <!-- Load Nav -->
-  <script src="../js/load-nav.js"></script>
+  <script src="/hacs/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("../includes/nav-cs10.html", "nav");
+    loadFileIntoEl("/hacs/includes/nav-js-ref.html", "nav");
   </script>
 
-  <script src="../js/prism.js"></script>
+  <script src="/hacs/js/prism.js"></script>
 </body>
 
 </html>
