--- a/js-reference.html
+++ b/js-reference.html
@@ -122,7 +122,7 @@
 
     <h2><i class="far fa-bookmark topic-heading"></i> JS Control Structures</h2>
     <hr>
-    <p class="descr">Learn how JavaScript may be used to select and repeat code with if statements and loops.<br></p>
+    <p class="descr">Use if statements and loops to select and repeat code.<br></p>
 
     <ol>
       <li>
@@ -133,6 +133,11 @@
       <li>
         <div class="li-div">
           <a href="js-control/if-statements.html">If Statements</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="js-control/update-variables.html">Update Variables</a>
         </div>
       </li>
       <li>
@@ -157,28 +162,38 @@
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS Miscellaneous</h2>
+    <!-- <h2><i class="far fa-bookmark topic-heading"></i>HTML &lt;canvas&gt; Basics</h2>
     <hr>
-    <p class="descr">Miscellaneous topics in JavaScript.<br></p>
+    <p class="descr">Use the html &lt;canvas&gt; to create drawings and animations.</p>
 
     <ol>
 
       <li>
         <div class="li-div">
-          <a href="#">HTML dataset</a>
+          <a href="#">Drawing Basics</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="#">fetch() & JSON</a>
+          <a href="#">Loops & Drawing</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="#">localStorage</a>
+          <a href="#">Animation Basics</a>
         </div>
       </li>
-    </ol>
+      <li>
+        <div class="li-div">
+          <a href="#">Control Animations</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="#">Draw Images</a>
+        </div>
+      </li>
+    </ol> -->
   </section>
 
   <!-- Load Nav -->
