--- a/page-template.html
+++ b/page-template.html
@@ -19,7 +19,7 @@
   <main>
     <a class="back-link" href="/hacs/js-reference.html">&lt; JS Reference</a>
     <div class="title">
-      <h1>Page Title</h1>
+      <h1>Page_Title</h1>
       <a href="#" id="yt-link" target="_blank">
         <i class="fab fa-youtube fa-lg"></i>
         Video Explanation
