--- a/concept-notes.html
+++ b/concept-notes.html
@@ -12,132 +12,19 @@
   <h1 class="main-heading wrapper">Concept Notes</h1>
 
   <div class="content wrapper notes-content">
-    <h2><i class="far fa-bookmark topic-heading"></i> JS IPO Basics</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> HTML &lt;canvas&gt;</h2>
     <hr>
-    <p>Use JavaScript to build simple Input-Process-Output <em>(IPO)</em> web
-      applications.<br></p>
+    <p>Create drawings, animations and games with HTML &lt;canvas&gt;.</p>
 
     <ol class="pl">
       <li>
         <div class="li-div">
-          <a href="js-ipo-basics/js-introduction.html">Introduction</a>
+          <a href="/hacs/concept-pages/point-in-rect.html">Point in Rectangle</a>
         </div>
       </li>
-      <li>
-        <div class="li-div">
-          <a href="js-ipo-basics/js-comments.html">Comments</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-ipo-basics/dev-console.html">Developer Console</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-ipo-basics/js-variables.html">Variables & Data</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-ipo-basics/js-number-data.html">Number Data Type</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-ipo-basics/js-math-object.html">Math Object</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-ipo-basics/js-string-data.html">String Data Type</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-ipo-basics/js-input-prompt.html">Input - prompt() </a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-ipo-basics/js-ipo-algorithm.html">IPO Algorithm</a>
-        </div>
-      </li>
+
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS IPO & HTML</h2>
-    <hr>
-    <p class="descr">Use JavaScript to interact with elements of a web page.<br></p>
-
-    <ol class="pl">
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/getElementById.html">getElementById()</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/click-events.html">Click Events</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/inner-html.html">innerHTML</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/input-elements.html">&lt;input&gt; Elements</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/modify-style.html">Modify Style</a>
-        </div>
-      </li>
-    </ol>
-
-    <h2><i class="far fa-bookmark topic-heading"></i> JS Control Structures</h2>
-    <hr>
-    <p class="descr">Use if statements and loops to select and repeat code.<br></p>
-
-    <ol class="pl">
-      <li>
-        <div class="li-div">
-          <a href="js-control/boolean-expressions.html">Boolean Expressions</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/if-statements.html">If Statements</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/update-variables.html">Update Variables</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/while-loops.html">While Loops</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/for-loops.html">For Loops</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/loop-uses.html">Uses of Loops</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/nested-loops.html">Nested Loops</a>
-        </div>
-      </li>
-    </ol>
   </div> <!-- end .content -->
 
   <!-- JAVASCRIPT -->
@@ -145,7 +32,7 @@
   <script src="/hacs/js/main.js"></script>
   <script>
     loadHead();
-    loadNav("active", "", "", "");
+    loadNav("", "", "", "active");
   </script>
 
   <script src="/hacs/js/prism.js"></script>
