point-in-circle setup

--- a/concept-notes.html
+++ b/concept-notes.html
@@ -22,6 +22,11 @@
           <a href="/hacs/concept-pages/point-in-rect.html">Point in Rectangle</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="/hacs/concept-pages/point-in-circle.html">Point in Circle</a>
+        </div>
+      </li>
 
     </ol>
 
