--- a/concept-pages/point-in-rect.html
+++ b/concept-pages/point-in-rect.html
@@ -16,6 +16,8 @@
     <h1>Point in Rectangle</h1>
 
     <p>Use if statements to determine if a point is inside of a rectangle.</p>
+    <p>A point will be inside of a rectangle if the x-coordinate of the point is between the left and right edges of the
+      rectangle and the y-coordinate of the point is between the top and bottom edges of the rectangle.</p>
     <!--
     <h4>Point in Rectangle Explanation (6:33)</h4>
     <div class="video-wrap">
